fixed broken image and little modification

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<!-- Google Font-->
 		<link
-			href="http://fonts.googleapis.com/css?family=Roboto"
+			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
 		<!-- Font Awesome -->
@@ -1448,40 +1448,7 @@
 									<span>CEO, Author.Inc</span>
 								</div>
 							</div>
-							<div class="each-client-item">
-								<div class="mh-client-item dark-bg black-shadow-1">
-									<img src="assets/images/c-1.png" alt="" class="img-fluid" />
-									<p>
-										Absolute wonderful ! I am completely blown away.The very
-										best.I was amazed at the quality
-									</p>
-									<h4>Abdul Hay</h4>
-									<span>CEO, Author.Inc</span>
-								</div>
-							</div>
-							<div class="each-client-item">
-								<div class="mh-client-item dark-bg black-shadow-1">
-									<img src="assets/images/c-1.png" alt="" class="img-fluid" />
-									<p>
-										Absolute wonderful ! I am completely blown away.The very
-										best.I was amazed at the quality
-									</p>
-									<h4>John Mike</h4>
-									<span>CEO, Author.Inc</span>
-								</div>
-							</div>
-
-							<div class="each-client-item">
-								<div class="mh-client-item dark-bg black-shadow-1">
-									<img src="assets/images/c-1.png" alt="" class="img-fluid" />
-									<p>
-										Absolute wonderful ! I am completely blown away.The very
-										best.I was amazed at the quality
-									</p>
-									<h4>John Mike</h4>
-									<span>CEO, Author.Inc</span>
-								</div>
-							</div>
+							
 						</div>
 					</div>
 				</div>
